# dj-bootstrap-components

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  manage.py  mkdocs.yml  setup.cfg
.github/: dependabot.yml
bootstrap_components/: apps.py
bootstrap_components/templates/bootstrap_components/: alert.html  badge.html  base.html  breadcrumb.html  card.html
bootstrap_components/templatetags/: util.py
bootstrap_components/tests/: settings.py  test_render.py  urls.py
docs/source/: alerts.md  badges.md  breadcrumbs.md  cards.md  components.md  conf.py  index.rst
