[metadata]
name = dj-bootstrap-components
version = 0.2.0
description = A Django app that provides easy to use wrappers for common Bootstrap components
long_description = file: README.rst
url = https://github.com/IshanManchanda/dj-bootstrap-components
# TODO
download_url = https://github.com/IshanManchanda/dj-bootstrap-components/releases
author = Ishan Manchanda, Param Kapur
author_email = kabootardevs@gmail.com
license = MIT
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.0
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
